--- a/Tutorial2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Tutorial2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -433,6 +433,8 @@ BlueprintCore="\"Object\" "
 BP_FPCharacter_C="\"Object.Pawn.Pawn|Input\" "
 Character="\"Object.Pawn.Pawn|Input\" "
 Pawn="\"Object.Pawn.Pawn|Input\" "
+PawnSensingComponent="\"Object\" "
+ProjectileMovementComponent="\"Object\" "
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
@@ -1059,10 +1061,60 @@ Turret_C.WorldPartition=True
 Turret_C.Events=True
 Turret_C.TransformCommon=True
 Turret_C.Networking=True
+PawnSensingComponent.Variable=True
+PawnSensingComponent.Sockets=True
+PawnSensingComponent.AI=True
+PawnSensingComponent.Tags=True
+PawnSensingComponent.ComponentTick=True
+PawnSensingComponent.ComponentReplication=True
+PawnSensingComponent.Cooking=True
+PawnSensingComponent.Events=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.ComponentTick=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Events=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.ComponentTick=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
+Bullet_C.Tick=True
+Bullet_C.Replication=True
+Bullet_C.Rendering=True
+Bullet_C.Collision=True
+Bullet_C.Actor=True
+Bullet_C.Input=True
+Bullet_C.HLOD=True
+Bullet_C.Physics=True
+Bullet_C.WorldPartition=True
+Bullet_C.Events=True
+ProjectileMovementComponent.Variable=True
+ProjectileMovementComponent.Sockets=True
+ProjectileMovementComponent.Projectile=True
+ProjectileMovementComponent.ProjectileBounces=True
+ProjectileMovementComponent.ProjectileSimulation=True
+ProjectileMovementComponent.ComponentTick=True
+ProjectileMovementComponent.Homing=True
+ProjectileMovementComponent.ProjectileInterpolation=True
+ProjectileMovementComponent.Velocity=True
+ProjectileMovementComponent.PlanarMovement=True
+ProjectileMovementComponent.MovementComponent=True
+ProjectileMovementComponent.Tags=True
+ProjectileMovementComponent.ComponentReplication=True
+ProjectileMovementComponent.Activation=True
+ProjectileMovementComponent.Cooking=True
+ProjectileMovementComponent.Events=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
@@ -1131,14 +1183,15 @@ ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/Turret/Turret
-MRUItem1=/Game/Framework/BP_GameMode
-MRUItem2=/Game/Blueprints/Player/InputActions/IA_Look
-MRUItem3=/Game/Blueprints/Player/InputActions/IA_Move
-MRUItem4=/Game/Blueprints/Player/InputActions/IA_Jump
-MRUItem5=/Game/Blueprints/Player/IMC_Default
-MRUItem6=/Game/Blueprints/Player/BP_FPCharacter
-MRUItem7=/Game/Blueprints/Turret/BP_Turret
+MRUItem0=/Game/Blueprints/Turret/Bullet
+MRUItem1=/Game/Blueprints/Turret/Turret
+MRUItem2=/Game/Framework/BP_GameMode
+MRUItem3=/Game/Blueprints/Player/InputActions/IA_Look
+MRUItem4=/Game/Blueprints/Player/InputActions/IA_Move
+MRUItem5=/Game/Blueprints/Player/InputActions/IA_Jump
+MRUItem6=/Game/Blueprints/Player/IMC_Default
+MRUItem7=/Game/Blueprints/Player/BP_FPCharacter
+MRUItem8=/Game/Blueprints/Turret/BP_Turret
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/Player/InputActions/IA_ActionName.IA_ActionName=0
