--- a/Tutorial2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Tutorial2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -431,10 +431,11 @@ MovementComponent="\"Object\" "
 Blueprint="\"Object\" "
 BlueprintCore="\"Object\" "
 BP_FPCharacter_C="\"Object.Pawn.Pawn|Input\" "
-Character="\"Object.Pawn.Pawn|Input\" "
-Pawn="\"Object.Pawn.Pawn|Input\" "
+Character=
+Pawn=
 PawnSensingComponent="\"Object\" "
 ProjectileMovementComponent="\"Object\" "
+RotatingMovementComponent="\"Object\" "
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
@@ -1064,7 +1065,7 @@ Turret_C.Networking=True
 PawnSensingComponent.Variable=True
 PawnSensingComponent.Sockets=True
 PawnSensingComponent.AI=True
-PawnSensingComponent.Tags=True
+PawnSensingComponent.Tags=False
 PawnSensingComponent.ComponentTick=True
 PawnSensingComponent.ComponentReplication=True
 PawnSensingComponent.Cooking=True
@@ -1110,6 +1111,27 @@ ProjectileMovementComponent.ComponentReplication=True
 ProjectileMovementComponent.Activation=True
 ProjectileMovementComponent.Cooking=True
 ProjectileMovementComponent.Events=True
+PropertyWrapper.Variable=True
+PropertyWrapper.DefaultValueCategory=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+Turret_C.Default=True
+RotatingMovementComponent.Variable=True
+RotatingMovementComponent.Sockets=True
+RotatingMovementComponent.RotatingComponent=True
+RotatingMovementComponent.PlanarMovement=True
+RotatingMovementComponent.MovementComponent=True
+RotatingMovementComponent.ComponentTick=True
+RotatingMovementComponent.Tags=True
+RotatingMovementComponent.ComponentReplication=True
+RotatingMovementComponent.Activation=True
+RotatingMovementComponent.Cooking=True
+RotatingMovementComponent.Events=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+K2Node_VariableSet.Events=True
+RotatingMovementComponent.AssetUserData=False
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -1212,6 +1234,9 @@ GameMapsSettings.DefaultModes=False
 InputSettings.Bindings=True
 BP_GameMode_C.Cooking=True
 WorldSettings.PrecomputedVisibility=False
+K2Node_CustomEvent.Graph=False
+PawnSensingComponent.ComponentTick=False
+RotatingMovementComponent.ComponentTick=False
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
