--- a/Tutorial2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Tutorial2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1134,16 +1134,17 @@ K2Node_VariableSet.Events=True
 RotatingMovementComponent.AssetUserData=False
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
+OpenAssetsAtExit=/Game/Blueprints/Turret/Bullet.Bullet
 OpenAssetsAtExit=/Game/Blueprints/Turret/Turret.Turret
 
 [SlateAdditionalLayoutConfig]
@@ -1213,7 +1214,6 @@ MRUItem4=/Game/Blueprints/Player/InputActions/IA_Move
 MRUItem5=/Game/Blueprints/Player/InputActions/IA_Jump
 MRUItem6=/Game/Blueprints/Player/IMC_Default
 MRUItem7=/Game/Blueprints/Player/BP_FPCharacter
-MRUItem8=/Game/Blueprints/Turret/BP_Turret
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/Player/InputActions/IA_ActionName.IA_ActionName=0
@@ -1224,6 +1224,8 @@ MRUItem8=/Game/Blueprints/Turret/BP_Turret
 /Game/Blueprints/Player/IMC_Default.IMC_Default=0
 /Game/Framework/BP_GameMode.BP_GameMode=0
 /Game/Blueprints/Turret/BP_Turret.BP_Turret=0
+/Game/Blueprints/Turret/Bullet.Bullet=0
+/Game/Blueprints/Turret/Turret.Turret=0
 
 [DetailCategoriesAdvanced]
 InputAction.Action=True
@@ -1289,8 +1291,8 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [RootWindow]
-ScreenPosition=X=18.400 Y=0.000
-WindowSize=X=1288.000 Y=728.000
+ScreenPosition=X=-7.200 Y=0.000
+WindowSize=X=1289.600 Y=729.600
 InitiallyMaximized=True
 
 [Directories2]
@@ -1304,7 +1306,7 @@ GenericOpen=../../../../../../Users/User/Documents/Unreal Projects/Tutorial2/Con
 GenericSave=../../../../../../Users/User/Documents/Unreal Projects/Tutorial2/Content/
 MeshImportExport=../../../../../../Users/User/Documents/Unreal Projects/Tutorial2/Content/
 WorldRoot=../../../../../../Users/User/Documents/Unreal Projects/Tutorial2/Content/
-Level=../../../../../../Users/User/Documents/Unreal Projects/Tutorial2/Content/
+Level=../../../../../../Users/User/Documents/GitHub/Y3_Game/Tutorial2/Content
 Project=C:/Program Files/Epic Games/UE_5.3/
 
 [ModuleFileTracking]
