--- a/Tutorial2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Tutorial2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1174,12 +1174,13 @@ Landscape.Replication=True
 Landscape.Networking=True
 Landscape.Input=True
 Landscape.Actor=True
+Bullet_C.LevelInstance=False
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -1217,7 +1218,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Turret
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1250,9 +1251,9 @@ ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/NewMap
-MRUItem1=/Game/Blueprints/Turret/Turret
-MRUItem2=/Game/Blueprints/Turret/Bullet
+MRUItem0=/Game/Blueprints/Turret/Bullet
+MRUItem1=/Game/NewMap
+MRUItem2=/Game/Blueprints/Turret/Turret
 MRUItem3=/Engine/EditorBlueprintResources/StandardMacros
 MRUItem4=/Game/Framework/BP_GameMode
 MRUItem5=/Game/Blueprints/Player/InputActions/IA_Look
@@ -1290,6 +1291,12 @@ RotatingMovementComponent.ComponentTick=False
 Turret_C.Actor=False
 PropertyWrapper.Variable=False
 ProjectileMovementComponent.ProjectileBounces=False
+K2Node_VariableGet.Variable=False
+Blueprint.ClassOptions=False
+Bullet_C.Tick=False
+Bullet_C.LevelInstance=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=False
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2472,7 +2479,7 @@ GameMapsSettings=True
 InputSettings=True
 
 [MessageLog]
-LastLogListing=EditorErrors
+LastLogListing=PIE
 
 [SuppressableDialogs]
 DeleteConfirmationVariable_Warning=False
