--- a/Tutorial2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Tutorial2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -95,7 +95,7 @@ PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
 bPromoteOutputLogWarningsDuringPIE=False
-NewWindowPosition=(X=899,Y=213)
+NewWindowPosition=(X=790,Y=167)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -130,9 +130,9 @@ LastExecutedLaunchName=DESKTOP-2H92KNL
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-NewWindowWidth=1286
-NewWindowHeight=750
-MultipleInstancePositions=(X=899,Y=213)
+NewWindowWidth=1302
+NewWindowHeight=830
+MultipleInstancePositions=(X=790,Y=167)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -427,14 +427,14 @@ SphereComponent="\"Object\" "
 CharacterMovementComponent="\"Object\" "
 PawnMovementComponent="\"Object\" "
 NavMovementComponent="\"Object\" "
-MovementComponent="\"Object\" "
+MovementComponent="\"Object\" \"Object.Velocity.Velocity\" "
 Blueprint="\"Object\" "
 BlueprintCore="\"Object\" "
 BP_FPCharacter_C="\"Object.Pawn.Pawn|Input\" "
 Character=
 Pawn="\"Object\" "
 PawnSensingComponent="\"Object\" "
-ProjectileMovementComponent="\"Object\" "
+ProjectileMovementComponent="\"Object\" \"Object.Velocity.Velocity\" "
 RotatingMovementComponent="\"Object\" "
 Turret_C="\"Object\" "
 BillboardComponent="\"Object\" "
@@ -1175,12 +1175,15 @@ Landscape.Networking=True
 Landscape.Input=True
 Landscape.Actor=True
 Bullet_C.LevelInstance=False
+Bullet_C.Default=True
+Bullet_C.TransformCommon=True
+Bullet_C.Networking=True
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
-RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -1297,6 +1300,7 @@ Bullet_C.Tick=False
 Bullet_C.LevelInstance=True
 StaticMeshComponent.Physics=True
 StaticMeshComponent.Collision=False
+ProjectileMovementComponent.ProjectileInterpolation=False
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1346,11 +1350,11 @@ Bookmarks=()
 PerBlueprintSettings=()
 bIncludeCommentNodesInBookmarksTab=True
 bShowBookmarksForCurrentDocumentOnlyInTab=False
-GraphEditorQuickJumps=()
+GraphEditorQuickJumps=((1, (EditedObjectPath="/Game/Blueprints/Turret/Turret.Turret:EventGraph",SavedViewOffset=(X=-698.107193,Y=-465.522709),SavedZoomAmount=0.500000)))
 
 [RootWindow]
 ScreenPosition=X=247.200 Y=73.600
-WindowSize=X=1292.800 Y=732.800
+WindowSize=X=1294.400 Y=734.400
 InitiallyMaximized=True
 
 [Directories2]
@@ -2467,6 +2471,7 @@ bAutomaticallyCheckoutOnAssetModification=False
 bSCCUseGlobalSettings=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Turret/Bullet.Bullet;
 RecentlyPlaced=/Game/Blueprints/Turret/Turret.Turret;
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
@@ -2479,7 +2484,7 @@ GameMapsSettings=True
 InputSettings=True
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=EditorErrors
 
 [SuppressableDialogs]
 DeleteConfirmationVariable_Warning=False
