--- a/Tutorial2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Tutorial2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1182,8 +1182,8 @@ Bullet_C.Networking=True
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -1221,7 +1221,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Turret
+ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1254,9 +1254,9 @@ ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/Turret/Bullet
-MRUItem1=/Game/NewMap
-MRUItem2=/Game/Blueprints/Turret/Turret
+MRUItem0=/Game/NewMap
+MRUItem1=/Game/Blueprints/Turret/Turret
+MRUItem2=/Game/Blueprints/Turret/Bullet
 MRUItem3=/Engine/EditorBlueprintResources/StandardMacros
 MRUItem4=/Game/Framework/BP_GameMode
 MRUItem5=/Game/Blueprints/Player/InputActions/IA_Look
@@ -1354,7 +1354,7 @@ GraphEditorQuickJumps=((1, (EditedObjectPath="/Game/Blueprints/Turret/Turret.Tur
 
 [RootWindow]
 ScreenPosition=X=247.200 Y=73.600
-WindowSize=X=1294.400 Y=734.400
+WindowSize=X=1296.000 Y=736.000
 InitiallyMaximized=True
 
 [Directories2]
