--- a/Tutorial2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Tutorial2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -337,12 +337,12 @@ Void_C=SkeletalMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Physic
 Checkpoint_C=SkeletalMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,Spawn_C.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.Waypoint,PropertyWrapper.DefaultValueCategory.Waypoints,PropertyWrapper.DefaultValueCategory.Objective,K2Node_VariableSet.DefaultValueCategory.Waypoints,K2Node_VariableGet.DefaultValueCategory.Waypoints,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,AI_Enemy_C.Physics.ConstraintsGroup
 
 [EditorStartup]
-LastLevel=/Engine/Maps/Templates/OpenWorld
+LastLevel=/Game/tutorial4
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.Velocity.Velocity\" "
+Object="\"Object\" "
 InputAction="\"Object\" "
 DataAsset="\"Object\" "
 InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[0]\" \"Object.Mappings.Mappings.Mappings[0].Triggers\" \"Object.Mappings.Mappings.Mappings[0].Modifiers\" \"Object.Mappings.Mappings.Mappings[1]\" \"Object.Mappings.Mappings.Mappings[2]\" \"Object.Mappings.Mappings.Mappings[2].Modifiers\" \"Object.Mappings.Mappings.Mappings[2].Modifiers.Modifiers[0]\" \"Object.Mappings.Mappings.Mappings[3]\" \"Object.Mappings.Mappings.Mappings[3].Modifiers\" \"Object.Mappings.Mappings.Mappings[4]\" \"Object.Mappings.Mappings.Mappings[4].Modifiers\" \"Object.Mappings.Mappings.Mappings[4].Modifiers.Modifiers[0]\" \"Object.Mappings.Mappings.Mappings[4].Modifiers.Modifiers[1]\" "
@@ -638,6 +638,10 @@ ContentWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.Rende
 Image="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 MainMenu_C="\"Object\" "
 PlayerController="\"Object\" "
+NiagaraBakerOutputTexture2D="\"Object\" "
+NiagaraBakerOutput="\"Object\" "
+NiagaraSystem="\"Object\" "
+FXSystemAsset="\"Object\" "
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
@@ -2372,6 +2376,8 @@ Void_C.Networking=True
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=Niagara
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -2379,7 +2385,6 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
@@ -2398,14 +2403,11 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 OpenAssetsAtExit=/Game/Blueprints/Objeective/BP_Objective.BP_Objective
-OpenAssetsAtExit=/Game/Blueprints/Turret/Turret.Turret
 OpenAssetsAtExit=/Game/Blueprints/UI/Objective_health.Objective_health
-OpenAssetsAtExit=/Game/Blueprints/UI/MainMenu.MainMenu
 OpenAssetsAtExit=/Game/Blueprints/Player/BP_FPCharacter.BP_FPCharacter
-OpenAssetsAtExit=/Game/Blueprints/CheckPoint/Checkpoint.Checkpoint
-OpenAssetsAtExit=/Game/Blueprints/CheckPoint/Void.Void
 OpenAssetsAtExit=/Game/Blueprints/Enemy/Spawn.Spawn
 OpenAssetsAtExit=/Game/Blueprints/Turret/Bullet.Bullet
+OpenAssetsAtExit=/Game/Blueprints/VFX/burst.burst
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2433,7 +2435,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Turret
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/VFX
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2487,31 +2489,32 @@ ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/Turret/Bullet
-MRUItem1=/Game/Blueprints/Enemy/Spawn
-MRUItem2=/Game/Blueprints/CheckPoint/Void
-MRUItem3=/Game/Blueprints/CheckPoint/Checkpoint
-MRUItem4=/Game/Blueprints/Player/BP_FPCharacter
-MRUItem5=/Game/Blueprints/UI/MainMenu
-MRUItem6=/Game/Blueprints/UI/Objective_health
-MRUItem7=/Game/Blueprints/Turret/Turret
-MRUItem8=/Game/Blueprints/Objeective/BP_Objective
-MRUItem9=/Game/tutorial4
-MRUItem10=/Game/NewMap
-MRUItem11=/Game/Blueprints/Enemy/AI_Enemy
-MRUItem12=/Game/NewMap_HLOD0_Instancing
-MRUItem13=/Game/SkyBox/SkyBoxMat
-MRUItem14=/Engine/MapTemplates/Sky/Desert_Outer_HDR
-MRUItem15=/Game/GoodSky/Maps/Level_GoodSky_Showcase
-MRUItem16=/Game/Blueprints/Player/IMC_Default
-MRUItem17=/Game/t4_material
-MRUItem18=/Game/landscape_material
-MRUItem19=/Game/PN_Banana/Map/Showroom
-MRUItem20=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem21=/Game/Framework/BP_GameMode
-MRUItem22=/Game/Blueprints/Player/InputActions/IA_Look
-MRUItem23=/Game/Blueprints/Player/InputActions/IA_Move
-MRUItem24=/Game/Blueprints/Player/InputActions/IA_Jump
+MRUItem0=/Game/Blueprints/VFX/burst
+MRUItem1=/Game/tutorial4
+MRUItem2=/Game/Blueprints/Turret/Bullet
+MRUItem3=/Game/Blueprints/Enemy/Spawn
+MRUItem4=/Game/Blueprints/CheckPoint/Void
+MRUItem5=/Game/Blueprints/CheckPoint/Checkpoint
+MRUItem6=/Game/Blueprints/Player/BP_FPCharacter
+MRUItem7=/Game/Blueprints/UI/MainMenu
+MRUItem8=/Game/Blueprints/UI/Objective_health
+MRUItem9=/Game/Blueprints/Turret/Turret
+MRUItem10=/Game/Blueprints/Objeective/BP_Objective
+MRUItem11=/Game/NewMap
+MRUItem12=/Game/Blueprints/Enemy/AI_Enemy
+MRUItem13=/Game/NewMap_HLOD0_Instancing
+MRUItem14=/Game/SkyBox/SkyBoxMat
+MRUItem15=/Engine/MapTemplates/Sky/Desert_Outer_HDR
+MRUItem16=/Game/GoodSky/Maps/Level_GoodSky_Showcase
+MRUItem17=/Game/Blueprints/Player/IMC_Default
+MRUItem18=/Game/t4_material
+MRUItem19=/Game/landscape_material
+MRUItem20=/Game/PN_Banana/Map/Showroom
+MRUItem21=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem22=/Game/Framework/BP_GameMode
+MRUItem23=/Game/Blueprints/Player/InputActions/IA_Look
+MRUItem24=/Game/Blueprints/Player/InputActions/IA_Move
+MRUItem25=/Game/Blueprints/Player/InputActions/IA_Jump
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/Player/InputActions/IA_ActionName.IA_ActionName=0
@@ -2543,6 +2546,7 @@ MRUItem24=/Game/Blueprints/Player/InputActions/IA_Jump
 /Game/Blueprints/UI/MainMenu.MainMenu=0
 /Game/Blueprints/CheckPoint/Checkpoint.Checkpoint=0
 /Game/Blueprints/CheckPoint/Void.Void=0
+/Game/Blueprints/VFX/burst.burst=0
 
 [DetailCategoriesAdvanced]
 InputAction.Action=True
@@ -2645,7 +2649,7 @@ GraphEditorQuickJumps=((1, (EditedObjectPath="/Game/tutorial4.tutorial4:Persiste
 
 [RootWindow]
 ScreenPosition=X=744.800 Y=3.200
-WindowSize=X=740.800 Y=766.400
+WindowSize=X=742.400 Y=768.000
 InitiallyMaximized=True
 
 [Directories2]
