--- a/Tutorial2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Tutorial2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -337,7 +337,7 @@ Void_C=SkeletalMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Physic
 Checkpoint_C=SkeletalMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,Spawn_C.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.Waypoint,PropertyWrapper.DefaultValueCategory.Waypoints,PropertyWrapper.DefaultValueCategory.Objective,K2Node_VariableSet.DefaultValueCategory.Waypoints,K2Node_VariableGet.DefaultValueCategory.Waypoints,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,AI_Enemy_C.Physics.ConstraintsGroup
 
 [EditorStartup]
-LastLevel=/Game/tutorial4
+LastLevel=/Engine/Maps/Templates/OpenWorld
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
@@ -2380,12 +2380,12 @@ RecentAssetEditors=Niagara
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
@@ -2435,7 +2435,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/VFX
+ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2490,16 +2490,16 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [AssetEditorSubsystemRecents]
 MRUItem0=/Game/Blueprints/VFX/burst
-MRUItem1=/Game/tutorial4
-MRUItem2=/Game/Blueprints/Turret/Bullet
-MRUItem3=/Game/Blueprints/Enemy/Spawn
-MRUItem4=/Game/Blueprints/CheckPoint/Void
-MRUItem5=/Game/Blueprints/CheckPoint/Checkpoint
-MRUItem6=/Game/Blueprints/Player/BP_FPCharacter
-MRUItem7=/Game/Blueprints/UI/MainMenu
-MRUItem8=/Game/Blueprints/UI/Objective_health
-MRUItem9=/Game/Blueprints/Turret/Turret
-MRUItem10=/Game/Blueprints/Objeective/BP_Objective
+MRUItem1=/Game/Blueprints/Turret/Bullet
+MRUItem2=/Game/Blueprints/Enemy/Spawn
+MRUItem3=/Game/Blueprints/Player/BP_FPCharacter
+MRUItem4=/Game/Blueprints/UI/Objective_health
+MRUItem5=/Game/Blueprints/Objeective/BP_Objective
+MRUItem6=/Game/tutorial4
+MRUItem7=/Game/Blueprints/CheckPoint/Void
+MRUItem8=/Game/Blueprints/CheckPoint/Checkpoint
+MRUItem9=/Game/Blueprints/UI/MainMenu
+MRUItem10=/Game/Blueprints/Turret/Turret
 MRUItem11=/Game/NewMap
 MRUItem12=/Game/Blueprints/Enemy/AI_Enemy
 MRUItem13=/Game/NewMap_HLOD0_Instancing
@@ -2649,7 +2649,7 @@ GraphEditorQuickJumps=((1, (EditedObjectPath="/Game/tutorial4.tutorial4:Persiste
 
 [RootWindow]
 ScreenPosition=X=744.800 Y=3.200
-WindowSize=X=742.400 Y=768.000
+WindowSize=X=744.000 Y=769.600
 InitiallyMaximized=True
 
 [Directories2]
